--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <script src="http://esotericsoftware.com/files/spine-player/3.7/spine-player.js"></script>
+  <script src="https://esotericsoftware.com/files/spine-player/3.7/spine-player.js"></script>
   <link rel="stylesheet" href="https://esotericsoftware.com/files/spine-player/3.7/spine-player.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
