--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     jsonUrl: './0067.json',
     atlasUrl: './0067.atlas.txt',
     backgroundColor: "#666666",
+    viewport: {
+      x: -1500,
+      y: 0,
+      width: 3000,
+      height: 3000,
+      padLeft: "10%",
+      padRight: "10%",
+      padTop: "10%",
+      padBottom: "10%"
+    },
     premultipliedAlpha: true
   });
 </script>
